--- a/_posts/2024-06-22-projects.md
+++ b/_posts/2024-06-22-projects.md
@@ -8,5 +8,6 @@ title: additional activities
 # Additional Activties
 
 * ~~Switch to neovim as IDE~~
-* no zero days in github (even if not creating lots of code)
+* ~~no zero days in github (even if not creating lots of code)~~
 * anki cards to remember things
+* react app and training
