--- a/_posts/2024-06-22-projects.md
+++ b/_posts/2024-06-22-projects.md
@@ -11,3 +11,4 @@ title: additional activities
 * ~~no zero days in github (even if not creating lots of code)~~
 * anki cards to remember things
 * react app and training
+* web scraper ? what to scrape?
